--- a/timer.html
+++ b/timer.html
@@ -9,12 +9,17 @@
 </head>
 
 <body>
+  <div id="popup">
+    <div id="stand">
+      <img id="stand-img" src="icons/icon128.png">
+    </div>
+  </div>
   <main class="wrapper fade-in">
     <div class="heading item">
       <h1>Stand Up</h1>
     </div>
     <div class="time-wrapper item">
-      <h1 class="time"></h1>
+      <h1 class="time">60</h1>
     </div>
   </main>
   <script src="timer.js"></script>
